modified parser, modified dp svm and lr implementation, modified compspec.json, modified local.py and remote.py

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 # dp_stats
-matplotlib
+# matplotlib
 # numba
-scikit-learn
 scipy
-statsmodels
+numpy
+scikit-learn
+
+# statsmodels
 ujson
+pandas
