--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,4 @@
-# dp_stats
-# matplotlib
-# numba
-scipy
-numpy
-scikit-learn
-
-# statsmodels
-ujson
-pandas
+numpy==1.18.5
+pandas==1.0.4
+scikit-learn==0.23.1
+ujson==3.0.0
